# ros_emulator

./: README.md
btcpp_model/: CMakeLists.txt  README.md  package.xml
btcpp_model/behavior_trees/: example_tree.xml
btcpp_model/include/btcpp_model/: gantry_emulator_action.hpp  robot_emulator_action.hpp
btcpp_model/launch/: btcpp_model.launch.py
btcpp_model/src/: gantry_emulator_action.cpp  main.cpp  robot_emulator_action.cpp
emulator/: CMakeLists.txt  Cargo.toml  package.xml  r2r_cargo.cmake
emulator/src/: lib.rs  main.rs
emulator/src/emulators/: gantry_emulator.rs  robot_emulator.rs
emulator/src/utils/: mod.rs
micro_sp_emulation/: CMakeLists.txt  Cargo.toml  package.xml
micro_sp_emulation/src/: lib.rs  main.rs
micro_sp_emulation/src/emulators/: gantry_emulator.rs  mod.rs  robot_emulator.rs
micro_sp_emulation/src/interfaces/: gantry_client_ticker.rs  mod.rs  robot_client_ticker.rs
micro_sp_emulation/src/models/: mod.rs
micro_sp_emulation/src/models/minimal/: mod.rs  model.rs  state.rs
micro_sp_emulation/src/utils/: env_logger.rs  mod.rs  state_publisher.rs
micro_sp_emulation_msgs/: CMakeLists.txt  package.xml
micro_sp_emulation_msgs/srv/: TriggerGantry.srv  TriggerRobot.srv
msgs/: CMakeLists.txt  package.xml
msgs/msg/: Emulation.msg
msgs/srv/: TriggerGantry.srv  TriggerRobot.srv
plansys2_model/: CMakeLists.txt  README.md  package.xml
plansys2_model/include/plansys2_model/: gantry_emulator_action.hpp  robot_emulator_action.hpp  util.hpp
plansys2_model/launch/: commands  plansys2_model.launch.py
plansys2_model/pddl/: domain.pddl  problem.pddl
plansys2_model/src/: gantry_calibrate_action_node.cpp  gantry_lock_action_node.cpp  gantry_move_action_node.cpp  gantry_unlock_action_node.cpp  robot_check_mounted_action_node.cpp  robot_mount_action_node.cpp  robot_move_action_node.cpp  robot_unmount_action_node.cpp
