<package format="3">
  <name>btcpp_model</name>
  <version>0.1.0</version>
  <description>BehaviorTree.CPP Model for ROS Emulator</description>

  <maintainer email="noreply@example.com">William Andersson and Vasilena Karaivanova</maintainer>
  <license>no_license</license>
  <author>William Andersson</author>
  <author>Vasilena Karaivanova</author>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>behaviortree_cpp</depend>
  <build_depend>emulation_msgs</build_depend>
  <exec_depend>emulation_msgs</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>