[package]
name = "emulation"
version = "0.1.0"
#authors = ["Endre Erős <endre.eros@chalmersindustriteknik.se>"]
edition = "2021"
autotests = false

[profile.colcon]
inherits = "release"

[dependencies]
log = "0.4.27"
env_logger = "0.11.8"
rand = "0.8.5"
chrono = "0.4.41"
r2r = "0.9.5"
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.140"
