[package]
name = "micro_sp_emulation"
version = "0.1.0"
authors = ["Endre Erős <endre.eros@chalmersindustriteknik.se>"]
edition = "2021"
autotests = false

[profile.colcon]
inherits = "release"

[dependencies]
log = "0.4.21"
env_logger = "0.11.5"
rand = "0.8.5"
chrono = "0.4.38"
r2r = "0.9.4"
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
micro_sp = {git = "https://github.com/endre90/micro_sp", tag = "v0.1.1"}
serde_json = "1.0.91"