<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>micro_sp_emulation</name>
  <version>0.0.1</version>
  <description>micro_sp_emulation</description>
  <maintainer email="endre.eros@chalmersindustriteknik.se.se">Endre Erős</maintainer>
  <license>no_license</license>
  <author>Endre Erős</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rcl</build_depend>                           
  <build_depend>rcl_action</build_depend>                    
  <build_depend>rmw_fastrtps_cpp </build_depend>      
  <build_depend>FastRTPS</build_depend>
  <build_depend>std_msgs</build_depend>         
  <build_depend>micro_sp_emulation_msgs</build_depend>

  <exec_depend>rcl</exec_depend>                    
  <exec_depend>rcl_action</exec_depend>                      
  <exec_depend>rmw_fastrtps_cpp</exec_depend>                
  <exec_depend>FastRTPS</exec_depend>               
  <exec_depend>std_msgs</exec_depend>         
  <exec_depend>micro_sp_emulation_msgs</exec_depend>               

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
